# usaspending-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  (+1 more)
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  pyproject.toml  usaspending_sdk.py  usaspending_types.py
py/core/: context.py  control.py  operation.py  utility_type.py
py/entity/: account_entity.py  agency_entity.py  award_entity.py  search_entity.py  spending_entity.py
py/feature/: audit_feature.py  cache_feature.py  idempotency_feature.py  netsim_feature.py  paging_feature.py  rbac_feature.py  retry_feature.py  streaming_feature.py  telemetry_feature.py  test_feature.py
py/test/: feature_harness.py  runner.py  test_account_direct.py  test_account_entity.py  test_agency_direct.py  test_agency_entity.py  test_award_direct.py  test_award_entity.py  test_exists.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py  test_search_entity.py  test_spending_direct.py  test_spending_entity.py
py/utility/: clean.py  done.py  feature_hook.py  feature_init.py  fetcher.py  make_error.py  make_fetch_def.py  make_point.py  make_request.py  make_result.py  make_spec.py  param.py  prepare_auth.py  prepare_headers.py  prepare_params.py  prepare_path.py  register.py  result_body.py  result_headers.py
(+494 files in other folders)
